--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
 
         <hr>
         <!-- view data -->
-        <div class="result" id="result">
-            <P id="view-data"></P>
-            <button type="button" id="btn-done">Done</button>
-            <button type="button" id="btn-delete">Delete</button>
-        </div>
+        <div class="result" id="result"></div>
         <hr>
         <!-- clear all data -->
         <div class="clear" id="clear">
